@@ -82,9 +82,8 @@ class Char(Widget, TranslateMixin, PopdownMixin):
     @property
     def modified(self):
         if self.record and self.field:
-            entry = self.entry.get_child() if self.autocomplete else self.entry
-            value = entry.get_text() or ''
-            return self.field.get_client(self.record) != value
+            value = self.get_client_value(self.record, self.field)
+            return value != self.get_value()
         return False
 
     def set_value(self, record, field):
@@ -95,6 +94,13 @@ class Char(Widget, TranslateMixin, PopdownMixin):
     def get_value(self):
         entry = self.entry.get_child() if self.autocomplete else self.entry
         return entry.get_text()
+
+    def get_client_value(self, record, field):
+        if not field:
+            value = ''
+        else:
+            value = field.get_client(record)
+        return value
 
     def display(self, record, field):
         super(Char, self).display(record, field)
@@ -118,11 +124,7 @@ class Char(Widget, TranslateMixin, PopdownMixin):
             size_entry.set_width_chars(-1)
             size_entry.set_max_length(0)
 
-        if not field:
-            value = ''
-        else:
-            value = field.get_client(record)
-
+        value = self.get_client_value(record, field)
         if not self.autocomplete:
             self.entry.set_text(value)
             reset_position(self.entry)
